--- a/Session_4 - 5/pom.xml
+++ b/Session_4 - 5/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>IdeaProjects</groupId>
-    <artifactId>Session_4 - 5</artifactId>
+    <artifactId>Session_4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
